# vendingmachine_tutorial

./: output.txt  vending_machine.thrift
src/OrderBeverageService/: OrderBeverageHandler.h  OrderBeverageService.cpp
src/WeatherService/: WeatherHandler.h
src/beveragePreferenceService/: BeveragePreferenceHandler.h  BeveragePreferenceService.cpp  CMakeLists.txt
